Increased padding on the left side to avoid overlap with the image

--- a/sone/static/css/style.css
+++ b/sone/static/css/style.css
@@ -190,7 +190,7 @@ div, p, a, h1, h2, h3, h4, h5 {
     background-position: center left;
     background-repeat: no-repeat;
     background-size: 35%;
-    padding: 2% 0 0 27%;
+    padding: 2% 0 0 35%;
     background-color: #caeaea;
     overflow-y: auto;
 }
